patch service improved for both Beer and Customer controllers.